# openapi.json
@@ -1,62 +1,42 @@
 {
-    "openapi": "3.1.0",
-    "info": {
-      "title": "FastAPI",
-      "version": "0.1.0"
-    },
-    "paths": {
-      "/handle_message/": {
-        "post": {
-          "summary": "Handle External Message",
-          "description": "Обработка сообщений от внешней системы.",
-          "operationId": "handle_external_message_handle_message__post",
-          "requestBody": {
+  "openapi": "3.1.0",
+  "info": {
+    "title": "FastAPI",
+    "version": "0.1.0"
+  },
+  "paths": {
+    "/qa/": {
+      "post": {
+        "summary": "Handle External Message",
+        "description": "Обработка сообщений от внешней системы.",
+        "operationId": "handle_external_message_qa__post",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/MessageRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Successful Response",
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/MessageRequest"
-                }
-              }
-            },
-            "required": true
-          },
-          "responses": {
-            "200": {
-              "description": "Successful Response",
-              "content": {
-                "application/json": {
-                  "schema": {
-                    "$ref": "#/components/schemas/MessageResponse"
-                  }
-                }
-              }
-            },
-            "422": {
-              "description": "Validation Error",
-              "content": {
-                "application/json": {
-                  "schema": {
-                    "$ref": "#/components/schemas/HTTPValidationError"
-                  }
+                  "$ref": "#/components/schemas/MessageResponse"
                 }
               }
             }
-          }
-        }
-      },
-      "/start_bots/": {
-        "get": {
-          "summary": "Start Bots",
-          "description": "Запуск ботов в отдельных потоках.",
-          "operationId": "start_bots_start_bots__get",
-          "responses": {
-            "200": {
-              "description": "Successful Response",
-              "content": {
-                "application/json": {
-                  "schema": {
-  
-                  }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
                 }
               }
             }
@@ -64,93 +44,109 @@
         }
       }
     },
-    "components": {
-      "schemas": {
-        "HTTPValidationError": {
-          "properties": {
-            "detail": {
-              "items": {
-                "$ref": "#/components/schemas/ValidationError"
-              },
-              "type": "array",
-              "title": "Detail"
+    "/start_bots/": {
+      "get": {
+        "summary": "Start Bots",
+        "description": "Запуск ботов в отдельных потоках.",
+        "operationId": "start_bots_start_bots__get",
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {}
+              }
             }
-          },
-          "type": "object",
-          "title": "HTTPValidationError"
-        },
-        "MessageRequest": {
-          "properties": {
-            "text": {
-              "type": "string",
-              "title": "Text"
-            },
-            "user_id": {
-              "type": "string",
-              "title": "User Id"
-            }
-          },
-          "type": "object",
-          "required": [
-            "text",
-            "user_id"
-          ],
-          "title": "MessageRequest"
-        },
-        "MessageResponse": {
-          "properties": {
-            "response": {
-              "type": "string",
-              "title": "Response"
-            },
-            "buttons": {
-              "items": {
-  
-              },
-              "type": "array",
-              "title": "Buttons"
-            }
-          },
-          "type": "object",
-          "required": [
-            "response",
-            "buttons"
-          ],
-          "title": "MessageResponse"
-        },
-        "ValidationError": {
-          "properties": {
-            "loc": {
-              "items": {
-                "anyOf": [
-                  {
-                    "type": "string"
-                  },
-                  {
-                    "type": "integer"
-                  }
-                ]
-              },
-              "type": "array",
-              "title": "Location"
-            },
-            "msg": {
-              "type": "string",
-              "title": "Message"
-            },
-            "type": {
-              "type": "string",
-              "title": "Error Type"
-            }
-          },
-          "type": "object",
-          "required": [
-            "loc",
-            "msg",
-            "type"
-          ],
-          "title": "ValidationError"
+          }
         }
       }
     }
+  },
+  "components": {
+    "schemas": {
+      "HTTPValidationError": {
+        "properties": {
+          "detail": {
+            "items": {
+              "$ref": "#/components/schemas/ValidationError"
+            },
+            "type": "array",
+            "title": "Detail"
+          }
+        },
+        "type": "object",
+        "title": "HTTPValidationError"
+      },
+      "MessageRequest": {
+        "properties": {
+          "text": {
+            "type": "string",
+            "title": "Text"
+          },
+          "user_id": {
+            "type": "string",
+            "title": "User Id"
+          }
+        },
+        "type": "object",
+        "required": [
+          "text",
+          "user_id"
+        ],
+        "title": "MessageRequest"
+      },
+      "MessageResponse": {
+        "properties": {
+          "response": {
+            "type": "string",
+            "title": "Response"
+          },
+          "buttons": {
+            "items": {},
+            "type": "array",
+            "title": "Buttons"
+          }
+        },
+        "type": "object",
+        "required": [
+          "response",
+          "buttons"
+        ],
+        "title": "MessageResponse"
+      },
+      "ValidationError": {
+        "properties": {
+          "loc": {
+            "items": {
+              "anyOf": [
+                {
+                  "type": "string"
+                },
+                {
+                  "type": "integer"
+                }
+              ]
+            },
+            "type": "array",
+            "title": "Location"
+          },
+          "msg": {
+            "type": "string",
+            "title": "Message"
+          },
+          "type": {
+            "type": "string",
+            "title": "Error Type"
+          }
+        },
+        "type": "object",
+        "required": [
+          "loc",
+          "msg",
+          "type"
+        ],
+        "title": "ValidationError"
+      }
+    }
   }
+}
